# get-to-the-point-podcast-editor

./: .env.example  .gitignore  Dockerfile.worker  README.md  auth.ts  modal_app.py  package-lock.json  package.json  pyproject.toml  requirements-worker.txt  requirements.txt  vercel.json
.github/workflows/: test.yml
api/auth/: [...all].ts
api/auth/sign-in/: email.ts
docs/: automatic-feed-backend-plan.md  no-owned-worker-spike.md  testing.md
podcast_editor/: __init__.py  auth.py  automatic.py  cloud.py  config.py  email_delivery.py  jobs.py  main.py  r2.py  schemas.py  security.py  worker.py
podcast_editor/pipeline/: __init__.py  highlights.py  ingest.py  media.py  no_worker.py  runner.py  splice.py  transcribe.py
public/: account.html  auth.html  faq.html  how-it-works.html  index.html  review.html  robots.txt  sitemap.xml  splice-spike.html
public/assets/: auth.js  feed-claim.js  review-logic.js  styles.css
public/assets/ffmpeg/: VERSIONS.md  const.js
scripts/: run-worker.sh  spike_assemblyai.py  spike_browser_splice.py
supabase/migrations/: 0001_jobs.sql  0002_private_feeds.sql  0003_better_auth.sql  0004_auth_runtime_role.sql  0005_security_hardening.sql  0006_storage_limits.sql  0007_private_feed_item_revisions.sql  0008_target_private_feed_refresh.sql  0009_republish_affected_feed_entry.sql  0010_fix_auth_rate_limit_ids.sql  0011_claim_anonymous_feeds.sql  0012_automatic_feed_backend.sql  0013_automatic_feed_safety.sql
tests/: test_auth.py  test_automatic.py  test_cloud.py  test_feed.py  test_feed_language.py  test_highlights.py  test_jobs.py  test_no_worker.py  test_production_smoke.py  test_r2.py  test_regressions.py  test_routes.py  test_security.py  test_splice.py  test_transcribe.py
tests/frontend/: feed-claim.test.mjs  review-logic.test.mjs
